# floodmodeller-api

./: .gitattributes  .gitignore  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  build commands.txt  fmapi-dev.code-workspace  get-started-requirements.txt  pyproject.toml  requirements.txt  setup.py  t.py  test.py  to_json.py  to_json_02.py  to_json_03.py  to_json_test_01.py  xml2d_testing_notebook.ipynb  xmltest.xml
.devcontainer/: devcontainer.json
.devcontainer/quickstart-notebook/: devcontainer.json
.devcontainer/quickstart_notebook/: devcontainer.json
.github/workflows/: black.yml  run_build.yml  run_build_test.yml  run_docs.yml  run_linters.yml  run_tests.yml
demo/: 01-get-started.ipynb  02-raise-section-bed-levels.ipynb  README.md  get-started.ipynb  landing.txt
demo/data/: 1d_nwk_EG14_channels_001_L.dbf  1d_xs_EG14_001_L.dbf  (+11 more)
floodmodeller_api/: Testing_PJC.py  __init__.py  _base.py  backup.py  constants.py  dat.py  diff.py  enums.py  gui.py  ied.py  ief.py  ief_flags.py  inp.py  lf1.py  mapping.py  regexs.py  test.py  to_from_json.py  tool.py  toolbox.py  tools.py  util.py  version.py  xml2d.py  xml2d_template.py  xml_utilities.py  xsd_backup.xml  zz.py  zzn.py  zzx.py
floodmodeller_api sample scripts/: create_culvert_witdh_ieds.py  interactive_flow_graph.py  raise_section_bed_levels.py
sample_code/: alter_qtbdy_hydrograph.py  calibration_plotting.py  create_culvert_witdh_ieds.py  export_sections_to_csv.py  extract_results.py  extract_time_series.py  import_refh_csv_extract.py  interactive_flow_graph.py  location_example.py  plot_bridge_units.py  plot_uncut_sections.py  raise_section_bed_levels.py  read_ief_example.py  rnweir_example.py  simulate_ief.py  update_ief_versions.py  uplift_floodplain_mannings.py
sample_scripts/: 300mmsiltationdemo.gxy  RNWEIR example.py  alter_qtbdy_hydrograph.py  calibration_plotting.py  convert_estry_001.py  convert_estry_001_oop.py  convert_estry_final.py  convert_estry_river  create_culvert_witdh_ieds.py  demo_2.py  export_sections_to_csv.py  extract_results.py  extract_time_series.py  import_refh_csv_extract.py  interactive_flow_graph.py  raise_section_bed_levels.py  simulate_ief.py  struc_log_tst.py  structure_log.py  structure_log_oop.py  test.py  update_ief_versions.py
scripts/: add_siltation.py  fmapi-add_siltation.bat  fmapi-structure_log.bat  fmapi-toolbox.bat  fmapi-toolbox.py  structure_log.bat  structure_log.py  tuflow_to_floodmodeller.bat  tuflow_to_floodmodeller.py
test/: README.md  test_all_classes.py  test_backup.py  test_dat.py  test_ied.py  test_ief.py  test_inp.py  test_logs_lf.py  test_zzn.py
toolbox/: example_tool.py  readme.md
(+350 files in other folders)
