[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.mypy]
ignore_missing_imports = true

[tool.pylint]
disable = "all"
enable = "used-before-assignment, superfluous-parens, unnecessary-dunder-call"

[tool.ruff]
line-length = 100
builtins = ["__version__"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",
    "ARG",
    "BLE",
    "D",
    "DTZ",
    "E402",
    "E501",
    "FBT",
    "FIX",
    "PGH003",
    "PLW",  # TODO: remove
    "PTH123",
    "S",
    "SLF",
    "T20",  # TODO: remove
    "TD",
    "TID",
    "TRY",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test*" = ["PLR0913", "PLR2004"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = true

[tool.isort]
profile = "black"
