[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.mypy]
ignore_missing_imports = true

[tool.pylint]
disable = "all"
enable = "used-before-assignment, superfluous-parens, unnecessary-dunder-call"

[tool.ruff]
line-length = 100
builtins = ["__version__"]
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",
    "ARG",
    "BLE",
    "D",
    "DTZ",
    "E402",
    "E501",
    "FBT",
    "PGH003",
    "PLW",
    "PTH123",
    "S",
    "SLF",
    "TID",
    "TRY",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test*" = ["PLR0913", "PLR2004"]
"sample*" = ["T201"]
"test_tool.py" = ["T201"]
"example_tool.py" = ["T201"]
"scripts*" = ["T201"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = true

[tool.isort]
profile = "black"
